--- a/styles/style.css
+++ b/styles/style.css
@@ -6,8 +6,8 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
- /* height: 100%;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  /* height: 100%;
   width: 100%;*/
 }
 
@@ -18,7 +18,6 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px; /* выше установили ограничения для секции */
-  /*padding-left: 64px;*/
   flex-direction: column;
   flex-wrap: wrap;
   background-color: #f2f2f2;
@@ -47,7 +46,6 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  /*order: 1;*/
 }
 
 .header__main-illustration {
@@ -64,7 +62,6 @@
   height: auto;
   z-index: 1;
 }
-
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
@@ -89,16 +86,14 @@
   display: flex;
   width: 228px;
   height: 32px;
-  /*order: 1;*/
 }
 
 .logo_place_header {
   border: 1px solid red;
   background-image: url(/Users/Ласточка/how-to-learn/images/logo_place_header.svg);
   position: absolute;
-    left: 64px;
-    top: 30px;
-  order: 1;
+  left: 64px;
+  top: 30px;
 }
 
 .description {
@@ -137,7 +132,7 @@
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
-  font-weight: normal;    
+  font-weight: normal;
   margin: 0;
   padding-bottom: 30px;
   display: flex;
@@ -408,7 +403,7 @@
   border: 1px solid red;
   line-height: 30px;
   font-size: 18px;
-  font-weight: normal;  
+  font-weight: normal;
   margin: 0;
   box-sizing: border-box;
 }
