Отправка на ревью2

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,12 +21,11 @@
   flex-direction: column;
   flex-wrap: wrap;
   background-color: #f2f2f2;
-  border: 1px solid red;
+
   justify-content: space-evenly;
 }
 
 .header__title {
-  border: 1px solid red;
   box-sizing: border-box;
   width: 730px;
   line-height: 96px;
@@ -38,7 +37,6 @@
 }
 
 .header__subtitle {
-  border: 1px solid red;
   width: 388px;
   position: absolute;
   bottom: 30px;
@@ -49,7 +47,6 @@
 }
 
 .header__main-illustration {
-  border: 1px solid red;
   max-width: 608px;
   max-height: 765px;
   box-sizing: border-box;
@@ -65,7 +62,6 @@
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
-  border: 1px solid red;
   display: flex;
   box-sizing: border-box;
   position: absolute;
@@ -82,14 +78,12 @@
 }
 
 .logo {
-  border: 1px solid red;
   display: flex;
   width: 228px;
   height: 32px;
 }
 
 .logo_place_header {
-  border: 1px solid red;
   background-image: url(/Users/Ласточка/how-to-learn/images/logo_place_header.svg);
   position: absolute;
   left: 64px;
@@ -98,11 +92,9 @@
 
 .description {
   display: flex;
-  border: 1px solid red;
 }
 
 .two-columns {
-  border: 1px solid red;
   display: flex;
   margin: 100px auto;
   justify-content: space-between;
@@ -111,7 +103,6 @@
 }
 
 .main-text {
-  border: 1px solid red;
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
@@ -120,7 +111,6 @@
 }
 
 .two-columns__brief {
-  border: 1px solid red;
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -139,7 +129,6 @@
   box-sizing: border-box;
   align-items: flex-start;
   flex-direction: row;
-  width: 80%;
   min-width: 764px;
 }
 
@@ -151,6 +140,8 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
+  display: contents;
+  float: left;
   box-sizing: border-box;
 }
 
@@ -163,7 +154,6 @@
 }
 
 .section-title {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
@@ -175,7 +165,6 @@
 }
 
 .section-subtitle {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
@@ -188,7 +177,6 @@
 }
 
 .table {
-  border: 1px solid red;
   display: flex;
   box-sizing: border-box;
   justify-content: space-between;
@@ -199,7 +187,6 @@
 }
 
 .table__cell {
-  border: 1px solid red;
   display: flex;
   box-sizing: border-box;
   padding-top: 60px;
@@ -232,7 +219,7 @@
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
-  border: 1px solid red;
+
   background-image: url(/Users/Ласточка/how-to-learn/images/feynman.png);
   background-position: bottom left;
   background-repeat: no-repeat;
@@ -245,7 +232,7 @@
 
 .feynman__title {
   display: flex;
-  border: 1px solid red;
+
   align-self: center;
   box-sizing: border-box;
   text-align: center;
@@ -258,7 +245,6 @@
 }
 
 .feynman__subtitle {
-  border: 1px solid red;
   display: flex;
   justify-content: center;
   box-sizing: border-box;
@@ -270,7 +256,6 @@
 }
 
 .feynman__link {
-  border: 1px solid red;
   display: flex;
   position: absolute;
   right: 48px;
@@ -284,7 +269,7 @@
 
 .kaufman {
   background-color: black;
-  border: 1px solid red;
+
   display: flex;
   position: relative;
   overflow: hidden;
@@ -298,7 +283,6 @@
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme-dark {
-  border: 1px solid red;
   width: 200px;
   color: white;
   padding-top: 80px;
@@ -315,7 +299,6 @@
 }
 
 .kaufman__triangle {
-  border: 1px solid red;
   display: flex;
   position: absolute;
   right: -200px;
@@ -327,7 +310,7 @@
 
 .footer {
   background-color: black;
-  border: 1px solid red;
+
   color: white;
   min-width: 350px;
   display: flex;
@@ -343,13 +326,12 @@
   width: 90%;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
+
   margin: 0;
   box-sizing: border-box;
 }
 
 .footer__column_content-copyright {
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -360,7 +342,6 @@
 }
 
 .logo_place_footer {
-  border: 1px solid red;
   background-image: url(/Users/Ласточка/how-to-learn/images/logo_place_footer.svg);
   width: 228px;
   height: 32px;
@@ -372,7 +353,6 @@
 }
 
 .footer__author {
-  border: 1px solid red;
   padding: 18px 0;
   line-height: 25px;
   font-size: 18px;
@@ -382,7 +362,6 @@
 }
 
 .footer__column_content-info {
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
   margin: 0;
@@ -390,7 +369,6 @@
 }
 
 .footer__column-heading {
-  border: 1px solid red;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
@@ -400,7 +378,6 @@
 }
 
 .footer__column-links {
-  border: 1px solid red;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
@@ -409,7 +386,6 @@
 }
 
 .footer__column_content-social {
-  border: 1px solid red;
   padding-bottom: 16px;
   display: flex;
   flex-direction: column;
@@ -418,7 +394,6 @@
 }
 
 .footer__social-icon {
-  border: 1px solid red;
   width: 16px;
   height: 16px;
   margin: 0;
@@ -426,7 +401,6 @@
 }
 
 .footer__column-link {
-  border: 1px solid red;
   text-decoration: none;
   margin: 0;
   color: white;
