--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@
 }
 
 .logo_place_header {
-  background-image: url(https://github.com/hope-208/how-to-learn/blob/main/images/logo_place_header.svg);
+  background-image: url(../images/logo_place_header.svg);
   position: absolute;
   left: 64px;
   top: 30px;
@@ -220,7 +220,7 @@
   flex-direction: column;
   background-color: #f2f2f2;
 
-  background-image: url(https://github.com/hope-208/how-to-learn/blob/main/images/feynman.png);
+  background-image: url(../images/feynman.png);
   background-position: bottom left;
   background-repeat: no-repeat;
   margin-top: 100px;
@@ -342,7 +342,7 @@
 }
 
 .logo_place_footer {
-  background-image: url(https://github.com/hope-208/how-to-learn/blob/main/images/logo_place_footer.svg);
+  background-image: url(../images/logo_place_footer.svg);
   width: 228px;
   height: 32px;
   justify-self: start;
