--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,8 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: "Helvetica Neue", Arial, sans-serif;
-  /* height: 100%;
-  width: 100%;*/
 }
 
 .header {
@@ -17,11 +11,10 @@
   position: relative;
   height: 100vh;
   min-height: 600px;
-  max-height: 756px; /* выше установили ограничения для секции */
+  max-height: 756px;
   flex-direction: column;
   flex-wrap: wrap;
   background-color: #f2f2f2;
-
   justify-content: space-evenly;
 }
 
@@ -31,9 +24,12 @@
   line-height: 96px;
   font-size: 102px;
   font-weight: 600;
-  position: absolute;
-  left: 64px;
   z-index: 1;
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
+  padding: 0;
+  padding-left: 64px;
 }
 
 .header__subtitle {
@@ -44,23 +40,23 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .header__main-illustration {
-  max-width: 608px;
-  max-height: 765px;
+  max-width: 765px;
+  max-height: 608px;
   box-sizing: border-box;
   position: absolute;
   right: 0;
   bottom: 0;
-}
-
-.header__main-illustration-size {
   height: auto;
   z-index: 1;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   display: flex;
   box-sizing: border-box;
@@ -72,6 +68,7 @@
   background-color: #2f80ed;
   z-index: 0;
 }
+
 .header__link {
   text-decoration: none;
   color: #2f80ed;
@@ -102,7 +99,7 @@
   width: 80%;
 }
 
-.main-text {
+.two-columns__main-text {
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
@@ -116,20 +113,26 @@
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
+  margin-block: 0;
+  margin-inline: 0;
   margin: 0;
+  padding: 0;
 }
 
 .two-columns__paragraph {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin: 0;
-  padding-bottom: 30px;
   display: flex;
   box-sizing: border-box;
   align-items: flex-start;
   flex-direction: row;
   min-width: 764px;
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
+  padding: 0;
+  padding-bottom: 30px;
 }
 
 .two-columns__paragraph:last-of-type {
@@ -147,7 +150,7 @@
 
 .digits {
   display: flex;
-  margin: 100px auto;
+  margin: 0 auto 100px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -161,19 +164,25 @@
   line-height: 1.15;
   font-size: 60px;
   font-weight: 600;
+  margin-block: 0;
+  margin-inline: 0;
   margin: 0;
+  padding: 0;
 }
 
 .section-subtitle {
   display: flex;
   justify-content: center;
   box-sizing: border-box;
-  padding-top: 20px;
   width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin-block: 0;
+  margin-inline: 0;
   margin: 0;
+  padding: 0;
+  padding-top: 20px;
 }
 
 .table {
@@ -184,6 +193,7 @@
   flex-wrap: wrap;
   flex-direction: row;
   width: 1100px;
+  list-style-type: none;
 }
 
 .table__cell {
@@ -194,32 +204,40 @@
   flex-wrap: wrap;
   flex-direction: column;
   width: 250px;
+  list-style-type: none;
 }
 
 .table__heading {
   justify-content: flex-start;
   box-sizing: border-box;
-  margin: 0;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
+  list-style-type: none;
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .table__text {
   justify-content: flex-start;
   box-sizing: border-box;
-  padding-top: 20px;
-  margin: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  list-style-type: none;
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
+  padding: 0;
+  padding-top: 20px;
 }
 
 .feynman {
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
-
   background-image: url(../images/feynman.png);
   background-position: bottom left;
   background-repeat: no-repeat;
@@ -232,13 +250,15 @@
 
 .feynman__title {
   display: flex;
-
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
+  padding: 0;
   align-self: center;
   box-sizing: border-box;
   text-align: center;
   width: 648px;
   padding-top: 100px;
-  margin: 0;
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
@@ -246,13 +266,16 @@
 
 .feynman__subtitle {
   display: flex;
+  margin: 0;
+  padding: 0;
   justify-content: center;
   box-sizing: border-box;
   padding-top: 70px;
-  margin: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  margin-block: 0;
+  margin-inline: 0;
 }
 
 .feynman__link {
@@ -268,8 +291,8 @@
 }
 
 .kaufman {
-  background-color: black;
-
+  background-color: #000000;
+  color: white;
   display: flex;
   position: relative;
   overflow: hidden;
@@ -281,64 +304,57 @@
   padding-bottom: 90px;
 }
 
-/* и элемента с модификатором вида ключ-значение */
 .table__cell_theme-dark {
   width: 200px;
-  color: white;
   padding-top: 80px;
-}
-
-.table__cell_theme-dark:nth-of-type(6n) {
-  padding-top: 0;
-  margin: 0;
-}
-
-.theme-dark {
-  color: white;
   z-index: 2;
+}
+
+.section-title_theme-dark
+  .section-subtitle_theme-dark
+  .table_theme-dark
+  .table__text_theme-dark {
+  z-index: 2;
+  color: white;
 }
 
 .kaufman__triangle {
   display: flex;
   position: absolute;
+  overflow: hidden;
   right: -200px;
   top: 0;
   z-index: 1;
   width: 877px;
   height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
 }
 
 .footer {
-  background-color: black;
-
+  background-color: #000000;
   color: white;
-  min-width: 350px;
+  min-height: 350px;
   display: flex;
   padding-top: 60px;
   padding-bottom: 40px;
   justify-content: center;
   flex-direction: row;
-  align-items: flex-start;
   box-sizing: border-box;
 }
 
-.footer__columns {
+.footer__column {
   width: 90%;
   display: flex;
-  justify-content: space-between;
-
   margin: 0;
   box-sizing: border-box;
+  justify-content: space-between;
 }
 
 .footer__column_content-copyright {
-  display: flex;
   flex-direction: column;
-  align-items: flex-start;
   justify-content: space-between;
   flex-basis: 711px;
-  margin: 0;
-  box-sizing: border-box;
+  display: flex;
 }
 
 .logo_place_footer {
@@ -357,52 +373,70 @@
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
   box-sizing: border-box;
+  margin-block: 0;
+  margin-inline: 0;
+  margin: 0;
 }
 
 .footer__column_content-info {
   display: flex;
-  flex-direction: column;
   margin: 0;
+  flex-direction: column;
   box-sizing: border-box;
+  flex-basis: content;
+  align-self: flex-start;
 }
 
 .footer__column-heading {
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
-  padding-bottom: 20px;
+  margin-block: 0;
+  margin-inline: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  padding-bottom: 20px;
 }
 
 .footer__column-links {
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
+  line-height: 16px;
   margin: 0;
   box-sizing: border-box;
+  display: flex;
 }
 
 .footer__column_content-social {
-  padding-bottom: 16px;
-  display: flex;
   flex-direction: column;
-  margin: 0;
   box-sizing: border-box;
+  flex-basis: content;
+  display: flex;
+  align-self: flex-start;
 }
 
 .footer__social-icon {
-  width: 16px;
+  display: flex;
+
   height: 16px;
   margin: 0;
   box-sizing: border-box;
+  padding-right: 10px;
 }
 
 .footer__column-link {
   text-decoration: none;
   margin: 0;
   color: white;
+  line-height: 16px;
   box-sizing: border-box;
+  padding-bottom: 8px;
+  display: flex;
+}
+
+.footer__column-link:last-of-type {
+  padding-bottom: 16px;
 }
