--- a/styles/style.css
+++ b/styles/style.css
@@ -119,6 +119,7 @@
   margin-inline: 0;
   margin: 0;
   padding: 0;
+  z-index: 2;
 }
 
 .two-columns__paragraph {
@@ -135,6 +136,7 @@
   margin: 0;
   padding: 0;
   padding-bottom: 30px;
+  z-index: 2;
 }
 
 .two-columns__paragraph:last-of-type {
@@ -272,6 +274,7 @@
   line-height: 1.15;
   font-size: 120px;
   font-weight: 600;
+  z-index: 2;
 }
 
 .feynman__subtitle {
@@ -286,6 +289,7 @@
   font-weight: normal;
   margin-block: 0;
   margin-inline: 0;
+  z-index: 2;
 }
 
 .feynman__link {
@@ -298,6 +302,7 @@
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  z-index: 2;
 }
 
 .kaufman {
@@ -394,6 +399,7 @@
   margin-block: 0;
   margin-inline: 0;
   margin: 0;
+  z-index: 2;
 }
 
 .footer__column_content_info {
@@ -415,6 +421,7 @@
   padding: 0;
   box-sizing: border-box;
   padding-bottom: 20px;
+  z-index: 2;
 }
 
 .footer__column-links {
@@ -434,6 +441,7 @@
   color: white;
   line-height: 16px;
   align-items: center;
+  z-index: 2;
 }
 
 .footer__column_content_social {
