Отправка на ревью 4

--- a/styles/style.css
+++ b/styles/style.css
@@ -427,8 +427,8 @@
 .footer__column-links {
   display: flex;
   font-size: 18px;
-  font-weight: normal;
-  line-height: 16px;
+  font-weight: 600;
+  line-height: 30px;
   margin: 0;
   box-sizing: border-box;
   flex-direction: column;
@@ -439,8 +439,10 @@
   text-decoration: none;
   margin: 0;
   color: white;
-  line-height: 16px;
   align-items: center;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
   z-index: 2;
 }
 
