--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,11 +1,11 @@
-.card__description {
+.cards__description {
   display: flex;
-  width: 240px;
+  width: 239px;
   box-sizing: border-box;
   align-items: flex-start;
   flex-direction: row;
-  justify-content: center;
-  width: 240px;
+  text-align: center;
+  width: 100%;
   line-height: 23px;
   font-size: 18px;
   font-weight: normal;
