--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,10 +1,14 @@
-.card__item {
+.cards__item {
   display: flex;
+  width: 240px;
   box-sizing: border-box;
-  align-items: flex-start;
+  margin-right: 100px;
   flex-wrap: wrap;
   flex-direction: column;
-  width: 240px;
   list-style-type: none;
   z-index: 2;
+}
+
+.cards__item:nth-of-type(3) {
+  margin-right: 0;
 }
