--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -1,6 +1,6 @@
 .digits {
   display: flex;
-  margin: 0 auto 100px;
+  margin: 100px auto 100px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
