--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -13,3 +13,8 @@
 .footer__column-link:last-of-type {
   padding-bottom: 16px;
 }
+
+.footer__column-link:hover {
+  color: #f2f2f2;
+  opacity: 0.7;
+}
