--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,4 +1,10 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity 0.4s;
+}
+
+.header__link:hover {
+  color: rgba(47, 129, 237, 0.9);
+  opacity: 0.7;
 }
