--- a/blocks/khan/__author/khan__author.css
+++ b/blocks/khan/__author/khan__author.css
@@ -1,3 +1,11 @@
 .khan__author {
   display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  margin-block: 0;
+  margin-inline: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
 }
