--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -1,3 +1,8 @@
 .khan__book-container {
   display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  height: 620px;
+  overflow: hidden;
 }
