--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,3 +1,17 @@
 .khan__buy-link {
   display: flex;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  color: #2f80ed;
+  padding-left: 46px;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+  transition: opacity 0.4s;
+}
+
+.khan__buy-link:hover {
+  color: rgba(47, 129, 237, 0.9);
+  opacity: 0.7;
 }
