--- a/blocks/khan/__container/khan__container.css
+++ b/blocks/khan/__container/khan__container.css
@@ -1,4 +1,9 @@
 .khan__container {
   display: flex;
-  align-content: flex-start;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  padding-top: 105px;
+  width: 80%;
+  flex-direction: column;
 }
