--- a/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
+++ b/blocks/khan/__quote-author-subline/khan__quote-author-subline.css
@@ -1,3 +1,13 @@
 .khan__quote-author-subline {
   display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  margin-block: 0;
+  margin-inline: 0;
+  padding-top: 10px;
+  padding-bottom: 63px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
 }
