--- a/blocks/khan/__quote-author/khan__quote-author.css
+++ b/blocks/khan/__quote-author/khan__quote-author.css
@@ -1,3 +1,12 @@
 .khan__quote-author {
   display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  margin-block: 0;
+  margin-inline: 0;
+  padding-top: 36px;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
 }
