--- a/blocks/khan/__title/khan__title.css
+++ b/blocks/khan/__title/khan__title.css
@@ -1,3 +1,11 @@
 .khan__title {
   display: flex;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  margin-block: 0;
+  margin-inline: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 600;
 }
