--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -1,3 +1,7 @@
 .khan {
   display: flex;
+  box-sizing: border-box;
+  margin: auto 0;
+  background-color: #f2f2f2;
+  justify-content: center;
 }
