--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -1,7 +1,13 @@
 .video {
   display: flex;
-  width: 80%;
-  min-width: 1050px;
-  justify-content: center;
+  box-sizing: border-box;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 1050px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -50px;
+  position: relative;
+  z-index: 1;
 }
