--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -1,7 +1,7 @@
 .khan__quote {
   display: flex;
   box-sizing: border-box;
-  width: 790px;
+  max-width: 790px;
   margin: 0;
   padding: 0;
   margin-block: 0;
