--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -1,3 +1,13 @@
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .rotation {
   transform: rotate(360deg);
+  animation: rotation linear infinite 20s;
 }
