--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,6 @@
+@import url(../vendor/normalize.css);
+@import url(../pages/page.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/logo/_place/logo_place_header.css);
@@ -20,8 +23,6 @@
 @import url(../blocks/section-subtitle/section-subtitle.css);
 
 @import url(../blocks/techniques/techniques.css);
-@import url(../blocks/section-title/section-title.css);
-@import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__image/cards__image.css);
@@ -33,10 +34,6 @@
 @import url(../blocks/video/__iframe/video__iframe.css);
 
 @import url(../blocks/oakley/oakley.css);
-@import url(../blocks/two-columns/two-columns.css);
-@import url(../blocks/two-columns/__brief/two-columns__brief.css);
-@import url(../blocks/two-columns/__main-text/two-columns__main-text.css);
-@import url(../blocks/two-columns/__paragraph/two-columns__paragraph.css);
 
 @import url(../blocks/feyman/feynman.css);
 @import url(../blocks/feyman/__title/feynman__title.css);
@@ -44,8 +41,6 @@
 @import url(../blocks/feyman/__link/feynman__link.css);
 
 @import url(../blocks/digits/digits.css);
-@import url(../blocks/section-title/section-title.css);
-@import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/table/table.css);
 @import url(../blocks/table/__cell/table__cell.css);
 @import url(../blocks/table/__heading/table__heading.css);
@@ -63,15 +58,10 @@
 @import url(../blocks/khan/__buy-link/khan__buy-link.css);
 
 @import url(../blocks/kaufman/kaufman.css);
-@import url(../blocks/section-title/section-title.css);
 @import url(../blocks/section-title/_theme/section-title_theme_dark.css);
-@import url(../blocks/section-subtitle/section-subtitle.css);
 @import url(../blocks/section-subtitle/_theme/section-subtitle_theme_dark.css);
-@import url(../blocks/table/table.css);
 @import url(../blocks/table/_theme/table_theme_dark.css);
-@import url(../blocks/table/__cell/table__cell.css);
 @import url(../blocks/table/__cell/_theme/table__cell_theme_dark.css);
-@import url(../blocks/table/__heading/table__heading.css);
 @import url(../blocks/table/__text/_theme/table__text_theme_dark.css);
 @import url(../blocks/kaufman/__triangle/kaufman__triangle.css);
 
@@ -91,11 +81,3 @@
 @import url(../blocks/footer/__column/_content/footer__column_content_info.css);
 @import url(../blocks/footer/__column/_content/footer__column_content_social.css);
 @import url(../blocks/footer/__social-icon/footer__social-icon.css);
-
-.page {
-  display: block;
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Helvetica Neue", Arial, sans-serif;
-}
